[package]
name = "rworld"
version = "0.1.0"
authors = ["Preboy.ZHANG <preboy@126.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.5", features = ["serde"] }
prost = "0.12"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
prost-build = "0.12"
